--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 					<li><a href="film_studies.html">Film Studies</a></li>
 					<li><a href="screenwriting.html">Screenwriting</a></li>
 					<li><a target="_blank" href="Nicolas Hurt - Resume.pdf">Resume</a></li>
+					<li><a>LOLOLOLOL</a></li>
 				</ul>			
 			</div>
 			
