--- a/screenwriting.html
+++ b/screenwriting.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Nicolas Hurt</title>
+		<link rel="shortcut icon" href="favicon.ico">
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
