--- a/screenwriting.html
+++ b/screenwriting.html
@@ -4,7 +4,21 @@
 		<title>Nicolas Hurt</title>
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+		<script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-29476187-1']);
+      _gaq.push(['_setDomainName', 'nicolashurt.com']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -17,7 +31,7 @@
 					<li><a href="index.html">About Me</a></li>
 					<li><a href="film_studies.html">Film Studies</a></li>
 					<li><a class="current_page" href="screenwriting.html">Screenwriting</a></li>
-					<li><a target="_blank" href="Nicolas Hurt - Resume.pdf">Resume</a></li>
+					<li><a target="_blank" href="files/Nicolas Hurt - Resume.pdf">Resume</a></li>
 				</ul>			
 			</div>
 			
@@ -25,10 +39,10 @@
 				<img class="about_me" src="images/about_me2.jpg">
 				<h2>Screenwriting</h2>
 				<ul>
-					<li><a target="_blank" href="Final Screenplay Revised Draft.pdf">Mr. Dobbs</a><span>(34 pages)</span></li>
-					<li><a target="_blank" href="Fairy Tale Screenplay.pdf">Hansel and Gretel</a><span>(12 pages)</span></li>
-					<li><a target="_blank" href="Silent Screenplay Revised.pdf">The Big One</a><span>(5 pages)</span></li>
-					<li><a target="_blank" href="Siren Scene.pdf">Untitled Sequence</a><span>(3 pages)</span></li>
+					<li><a target="_blank" href="files/Final Screenplay Revised Draft.pdf">Mr. Dobbs</a><span>(34 pages)</span></li>
+					<li><a target="_blank" href="files/Fairy Tale Screenplay.pdf">Hansel and Gretel</a><span>(12 pages)</span></li>
+					<li><a target="_blank" href="files/Silent Screenplay Revised.pdf">The Big One</a><span>(5 pages)</span></li>
+					<li><a target="_blank" href="files/Siren Scene.pdf">Untitled Sequence</a><span>(3 pages)</span></li>
 				</ul>
 			</div>
 			
