--- a/film_studies.html
+++ b/film_studies.html
@@ -36,7 +36,7 @@
 			</div>
 			
 			<div id="content">
-				<img class="about_me" src="images/about_me2.jpg">
+				<img class="about_me" src="images/nick.jpg">
 				<h2>Film Studies</h2>
 				<ul>
 					<li><a target="_blank" href="files/Film Final Paper.pdf"> 3-D Cinema: Triumph of the Image</a></li>
