--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 			
 			<div id="content">
-				<img class="about_me" src="images/about_me2.jpg">
+				<img class="about_me" src="images/nick.jpg">
 				<h2>About Me</h2>
 				<p>Nicolas Hurt is currently a Junior in the Tepper School of Business at Carnegie Mellon University, where he is pursuing a customized track in “Film Production Management” and minoring in Film and Media Studies. Before college, he was part of three student film crews which shot on-location in Utah, North Dakota, and Ireland, and he has interned for two summers at Illumination Entertainment in Santa Monica, California. In addition to being a coordinator of fundraising and marketing for the Faces of Others International Film Festival, Nick is heavily involved in the CMU filmmaking club, for which he has produced multiple short films. His life goal is to be a Hollywood film director whose name is recognized by people in Wyoming.</p>
 				<p><a class="email" href="mailto:nhurt@andrew.cmu.edu">nhurt@andrew.cmu.edu</a></p>
