--- a/screenwriting.html
+++ b/screenwriting.html
@@ -36,7 +36,7 @@
 			</div>
 			
 			<div id="content">
-				<img class="about_me" src="images/about_me2.jpg">
+				<img class="about_me" src="images/nick.jpg">
 				<h2>Screenwriting</h2>
 				<ul>
 					<li><a target="_blank" href="files/Final Screenplay Revised Draft.pdf">Mr. Dobbs</a><span>(34 pages)</span></li>
