dark green links

--- a/film_studies.html
+++ b/film_studies.html
@@ -39,10 +39,10 @@
 				<img class="about_me" src="images/nick.jpg">
 				<h2>Film Studies</h2>
 				<ul>
-					<li><a target="_blank" href="files/Film Final Paper.pdf"> 3-D Cinema: Triumph of the Image</a></li>
-					<li><a target="_blank" href="files/Film Short Paper 2.pdf">Citizen Kane and the Active Spectator</a></li>
-					<li><a target="_blank" href="files/Film Short Paper 1.pdf">The Gangster Film: A Welcomed Tragedy</a></li>
-					<li><a target="_blank" href="files/Film Short Paper 3.pdf">Batman: Critical Reception of the Hollywood Blockbuster</a></li>
+					<li><a target="_blank" href="files/Film Final Paper.pdf"> 3-D Cinema: Triumph of the Image</a><span>(15 pages)</span></li>
+					<li><a target="_blank" href="files/Film Short Paper 2.pdf">Citizen Kane and the Active Spectator</a><span>(5 pages)</span></li>
+					<li><a target="_blank" href="files/Film Short Paper 1.pdf">The Gangster Film: A Welcomed Tragedy</a><span>(5 pages)</span></li>
+					<li><a target="_blank" href="files/Film Short Paper 3.pdf">Batman: Critical Reception of the Hollywood Blockbuster</a><span>(5 pages)</span></li>
 				</ul>
 			</div>
 			
