--- a/film_studies.html
+++ b/film_studies.html
@@ -23,7 +23,7 @@
 	<body>
 		<div id="wrapper">
 			<div id="header">
-				<h1>Nicolas A. Hurt</h1>
+				<h1><a href="index.html">Nicolas A. Hurt</a></h1>
 			</div>
 			
 			<div id="menu" class="round-edge">
