--- a/worm.html
+++ b/worm.html
@@ -36,7 +36,7 @@
 				</ul>			
 			</div>
 			
-			<div id="content" style="text-align: center; height: 750px">
+			<div id="content" style="text-align: center; height: 750px;">
 				<canvas data-processing-sources="files/Worm_Game_Z.pde"></canvas>
 			</div>
 			
