--- a/worm.html
+++ b/worm.html
@@ -22,7 +22,7 @@
     </script>
 	</head>
 	<body>
-		<div id="wrapper">
+		<div id="wrapper" style="height: 750px;">
 			<div id="header">
 				<h1><a href="index.html">Nicolas A. Hurt</a></h1>
 			</div>
@@ -36,7 +36,7 @@
 				</ul>			
 			</div>
 			
-			<div id="content" style="text-align: center; height: 750px;">
+			<div id="content" style="text-align: center;">
 				<canvas data-processing-sources="files/Worm_Game_Z.pde"></canvas>
 			</div>
 			
