styling and font

--- a/worm.html
+++ b/worm.html
@@ -22,7 +22,7 @@
     </script>
 	</head>
 	<body>
-		<div id="wrapper" style="height: 750px;">
+		<div id="wrapper" style="height: 700px;">
 			<div id="header">
 				<h1><a href="index.html">Nicolas A. Hurt</a></h1>
 			</div>
@@ -37,7 +37,7 @@
 			</div>
 			
 			<div id="content" style="text-align: center;">
-				<canvas data-processing-sources="files/Worm_Game_Z.pde"></canvas>
+				<canvas id="game" width=500 height=500 data-processing-sources="files/Worm_Game_Z.pde"></canvas>
 			</div>
 			
 		</div>
