--- a/worm.html
+++ b/worm.html
@@ -37,7 +37,7 @@
 			</div>
 			
 			<div id="content" style="text-align: center;">
-				<canvas id="game" width=500 height=500 data-processing-sources="files/Worm_Game_Z.pde"></canvas>
+				<canvas class="game" width=500 height=500 data-processing-sources="files/Worm_Game_Z.pde"></canvas>
 			</div>
 			
 		</div>
