--- a/worm.html
+++ b/worm.html
@@ -37,7 +37,9 @@
 			</div>
 			
 			<div id="content" style="text-align: center;">
-				<canvas class="game" width=500 height=500 data-processing-sources="files/Worm_Game_Z.pde"></canvas>
+			  <div class="game_wrapper">
+  				<canvas class="game" width=500 height=500 data-processing-sources="files/Worm_Game_Z.pde"></canvas>
+				</div>
 			</div>
 			
 		</div>
