titles for icons

--- a/new/index.html
+++ b/new/index.html
@@ -14,12 +14,44 @@
 			</div>
 			
 			<div id="menu" class="round-edge">
-			  <embed src="images/icon/director_chair.svg" type="image/svg+xml" />
-			  <embed src="images/icon/clapper_open.svg" type="image/svg+xml" />		
-			  <embed src="images/icon/typewriter.svg" type="image/svg+xml" />		
-			  <embed src="images/icon/fountain_pen.svg" type="image/svg+xml" />		
-			  <embed src="images/icon/bullhorn.svg" type="image/svg+xml" />		
-			  <embed src="images/icon/toilet_paper.svg" type="image/svg+xml" />		
+			  <ul>
+			    <li>
+			      <a>
+			        <embed src="images/icon/director_chair.svg" type="image/svg+xml" />
+			        <span>Director</span>
+			      </a>
+			    </li>
+			    <li>
+			      <a>
+			        <embed src="images/icon/clapper_open.svg" type="image/svg+xml" />
+			        <span>Producer</span>
+			      </a>
+			    </li>
+			    <li>
+			      <a>
+			        <embed src="images/icon/typewriter.svg" type="image/svg+xml" />
+			        <span>Screenwriter</span>
+			      </a>
+			    </li>
+			    <li>
+			      <a>
+			        <embed src="images/icon/fountain_pen.svg" type="image/svg+xml" />
+			        <span>Film Analyst</span>
+			      </a>
+			    </li>
+			    <li>
+			      <a>
+			        <embed src="images/icon/bullhorn.svg" type="image/svg+xml" />
+			        <span>Other Roles</span>
+			      </a>
+			    </li>
+			    <li>
+			      <a>
+			        <embed src="images/icon/toilet_paper.svg" type="image/svg+xml" />
+			        <span>Resume</span>
+			      </a>
+			    </li>
+			  </ul>
 			</div>
 			
 			<div id="content">
