--- a/new/index.html
+++ b/new/index.html
@@ -5,7 +5,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 		<?xml-stylesheet type="text/css" href="stylesheets/svg.css" ?>  
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+		<script src="javascripts/jquery.path.js"></script>
+		<script src="javascripts/application.js"></script>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -17,7 +19,7 @@
 			  <ul>
 			    <li>
 			      <a>
-			        <embed src="images/icon/director_chair.svg" type="image/svg+xml" />
+			        <object data="images/icon/director_chair.svg" type="image/svg+xml" ></object>
 			        <span>Director</span>
 			      </a>
 			    </li>
