--- a/new/index.html
+++ b/new/index.html
@@ -5,14 +5,13 @@
 		<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 		<?xml-stylesheet type="text/css" href="stylesheets/svg.css" ?>  
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-		<script src="javascripts/jquery.path.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="javascripts/application.js"></script>
 	</head>
 	<body>
 		<div id="wrapper">
 			<div id="header">
-				<h1><a href="index.html">Nicolas A. Hurt</a></h1>
+				<h1><a href="index.html">Nicolas Hurt</a></h1>
 			</div>
 			
 			<div id="menu" class="round-edge">
