svg flash support

--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 		<title>Nicolas Hurt</title>
 		<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-		<?xml-stylesheet type="text/css" href="stylesheets/svg.css" ?>  
+		<script src="src/svg.js" data-path="src"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="javascripts/application.js"></script>
 	</head>
@@ -17,38 +17,38 @@
 			<div id="menu" class="round-edge">
 			  <ul>
 			    <li>
-			      <a>
-			        <object data="images/icon/director_chair.svg" type="image/svg+xml" ></object>
+			      <a href="/">
+			        <object data="images/icon/director_chair.svg" type="image/svg+xml"></object>
 			        <span>Director</span>
 			      </a>
 			    </li>
 			    <li>
 			      <a>
-			        <embed src="images/icon/clapper_open.svg" type="image/svg+xml" />
+			        <object data="images/icon/clapper_open.svg" type="image/svg+xml"></object>
 			        <span>Producer</span>
 			      </a>
 			    </li>
 			    <li>
 			      <a>
-			        <embed src="images/icon/typewriter.svg" type="image/svg+xml" />
+			        <object data="images/icon/typewriter.svg" type="image/svg+xml" ></object>
 			        <span>Screenwriter</span>
 			      </a>
 			    </li>
 			    <li>
 			      <a>
-			        <embed src="images/icon/fountain_pen.svg" type="image/svg+xml" />
+			        <object data="images/icon/fountain_pen.svg" type="image/svg+xml"></object>
 			        <span>Film Analyst</span>
 			      </a>
 			    </li>
 			    <li>
 			      <a>
-			        <embed src="images/icon/bullhorn.svg" type="image/svg+xml" />
+			        <object data="images/icon/bullhorn.svg" type="image/svg+xml"></object>
 			        <span>Other Roles</span>
 			      </a>
 			    </li>
 			    <li>
 			      <a>
-			        <embed src="images/icon/toilet_paper.svg" type="image/svg+xml" />
+			        <object data="images/icon/toilet_paper.svg" type="image/svg+xml"></object>
 			        <span>Resume</span>
 			      </a>
 			    </li>
