--- a/new/index.html
+++ b/new/index.html
@@ -57,7 +57,7 @@
 			
 			<div id="content">
 			  <div id="viewbox">
-			    <iframe src="http://player.vimeo.com/video/38886298" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> <p><a href="http://vimeo.com/38886298">Three Mimes</a> from <a href="http://vimeo.com/nicolashurt">Nicolas Hurt</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+			    <iframe src="http://player.vimeo.com/video/38886298" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
 			</div>
 		</div>
