--- a/new/index.html
+++ b/new/index.html
@@ -18,13 +18,29 @@
 			  <ul>
 			    <li>
 			      <a href="/">
-			        <object data="images/icon/director_chair.svg" type="image/svg+xml"></object>
+			        <svg class="menu_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Ebene_1" x="0px" y="0px" width="90px" height="90px" viewBox="0 0 90 90" enable-background="new 0 0 90 90" xml:space="preserve">
+              <path d="M68.477,10.859V4.292c0-0.911-0.739-1.65-1.65-1.65s-1.65,0.739-1.65,1.65v6.567H68.477z"/>
+              <path d="M47.412,63.96l21.582-20.543c0.665-0.633,0.691-1.686,0.059-2.351c-0.168-0.176-0.365-0.304-0.576-0.39v-7.732h-3.301v7.417  H24.822v-7.417h-3.301v7.732c-0.211,0.086-0.408,0.214-0.575,0.39c-0.633,0.665-0.606,1.718,0.059,2.351L42.587,63.96L21.005,84.503  c-0.665,0.634-0.691,1.687-0.059,2.352c0.327,0.344,0.766,0.517,1.205,0.517c0.412,0,0.825-0.152,1.146-0.458L45,66.256  l21.701,20.657c0.321,0.306,0.734,0.458,1.146,0.458c0.439,0,0.878-0.173,1.205-0.517c0.633-0.665,0.606-1.718-0.059-2.352  L47.412,63.96z M26.084,43.66h37.83L45,61.664L26.084,43.66z"/>
+              <path d="M24.822,10.859V4.292c0-0.911-0.739-1.65-1.65-1.65s-1.65,0.739-1.65,1.65v6.567H24.822z"/>
+              <rect x="17.845" y="12.509" width="54.311" height="18.785"/>
+              </svg>
 			        <span>Director</span>
 			      </a>
 			    </li>
 			    <li>
 			      <a>
-			        <object data="images/icon/clapper_open.svg" type="image/svg+xml"></object>
+			        <svg class="menu_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+              <g>
+              	<polygon points="0,26.716 2.312,37.865 19.361,34.331 7.485,25.163  "/>
+              	<polygon points="17.841,23.017 29.716,32.185 40.549,29.939 28.675,20.771  "/>
+              	<polygon points="39.027,18.625 50.904,27.793 61.736,25.546 49.861,16.378  "/>
+              	<polygon points="60.217,14.231 72.092,23.399 82.925,21.153 71.05,11.985  "/>
+              	<polygon points="95.585,6.899 81.404,9.838 93.279,19.007 97.896,18.05  "/>
+              </g>
+              <g>
+              	<path d="M99.93,49.261V37.873h-4.715l-9.768,11.388H74.872l9.769-11.388H73.576l-9.766,11.388H53.232l9.77-11.388H51.938   L42.17,49.261H31.596l9.767-11.388H30.3l-9.769,11.388H9.957l9.767-11.388H2.312v11.388v39.891c0,2.182,1.768,3.949,3.948,3.949   h89.791c2.182,0,3.949-1.77,3.949-3.949V49.261H99.93z"/>
+              </g>
+              </svg>
 			        <span>Producer</span>
 			      </a>
 			    </li>
