--- a/new/director.html
+++ b/new/director.html
@@ -110,6 +110,7 @@
 			    <h2>Bonsai</h2>
 			    <p>Continuing the theme of dialogue-free shorts inspired by Pixar, <i>Bonsai</i> tells the story of father and son. It was filmed on super 8mm film, which gives it that "yesteryear" aesthetic and poses a handful of new challenges for me as a filmmaker.</p>
   			  <p><i>Written and Directed by Nicolas Hurt</i></p>
+  			  <iframe src="http://player.vimeo.com/video/41047005" width="576" height="384"frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
 			  <div class="description">
 			    <div>
@@ -122,6 +123,7 @@
 			    <h2>Three Mimes</h2>
 			    <p>The film which marks my directorial debut. <i>Three Mimes</i> is a dialogue-free short film inspired by Pixar shorts.</p>
   			  <p><i>Written and Directed by Nicolas Hurt</i></p>
+  			  <iframe src="http://player.vimeo.com/video/38886298" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
 			</div>
 		</div>
