bigger and color

--- a/new/director.html
+++ b/new/director.html
@@ -95,7 +95,7 @@
 			</div>
 			
 			<div id="content">
-			  <div class="description">
+			  <div class="description" data-fill="#00AD17">
 			    <div>
 			    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="87.778px" height="100px" viewBox="0 0 87.778 100" enable-background="new 0 0 87.778 100" xml:space="preserve">
           <g id="Layer_1">
@@ -111,7 +111,7 @@
   			  <p>Written and Directed by Nicolas Hurt</p>
   			  <iframe src="http://player.vimeo.com/video/41047005" width="576" height="384"frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
-			  <div class="description">
+			  <div class="description" data-fill="#f00">
 			    <div>
 			      <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="56.480801" height="100" id="svg2" version="1.1" inkscape:version="0.48.2 r9819" sodipodi:docname="mime.svg" inkscape:export-xdpi="317.56" inkscape:export-ydpi="317.56">
             <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1" transform="translate(-18.210652,-19.24356)">
