--- a/new/producer.html
+++ b/new/producer.html
@@ -104,7 +104,22 @@
 			    <h2>The Perils of Growing Up Flat-Chested</h2>
 			    <p>A coming of age comedy which tells the story of Katya, a sixteen year old girl determined to increase her bust size before a study date with her science lab partner. This is a short film that - much like puberty - is at once warm, funny, and filled with the thrill of anticipation.</p>
   			  <p>Written and Directed by Yulin Kuang</p>
-  			  <p><a href=http://perilsofproduction.wordpress.com/>http://perilsofproduction.wordpress.com/</a></p>
+  			  <p><a href="http://perilsofproduction.wordpress.com/">http://perilsofproduction.wordpress.com/</a></p>
+  			  <iframe src="http://player.vimeo.com/video/45941165" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			  </div>
+			  <div class="description" data-fill="#F00">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="-1.507 -18.517 100 100" enable-background="new -1.507 -18.517 100 100" xml:space="preserve">
+            <defs>
+            </defs>
+            <path fill="#000000" d="M48.639,4.167C24.238-10.715,0,19.048,0,19.048c48.639,17.743,97.277,0,97.277,0S73.04-10.715,48.639,4.167z   M65.408,10.013c-0.381,0.164-0.8,0.256-1.24,0.256c-1.734,0-3.144-1.407-3.144-3.144c0-1.736,1.409-3.143,3.144-3.143  c0.409,0,0.798,0.084,1.157,0.227l0.001-0.004c0,0,7.397-0.082,21.193,10.762C86.52,14.967,72.336,9.125,65.408,10.013z"/>
+            <path fill="#000000" d="M0,20.65c50.66,72.541,97.277,0,97.277,0C39.562,40.677,0,20.65,0,20.65z M69.377,40.77l-0.001-0.004  c-0.296,0.177-0.625,0.306-0.983,0.364c-1.523,0.247-2.958-0.789-3.205-2.313c-0.246-1.522,0.789-2.958,2.312-3.205  c0.389-0.063,0.768-0.041,1.125,0.05c6.207-0.204,17.823-7.345,17.823-7.345C75.88,39.792,69.377,40.77,69.377,40.77z"/>
+            </svg>
+          </div>
+			    <h2>First Kiss</h2>
+			    <p>The story of Adam Schoenberger, a fourteen-year-old romantic who finds out a pretty girl wants to kiss him at his best friend's Spin the Bottle party. This short film explores the thrill of anticipation and the pangs of growing up, all in an unabashed ode to the agonies of adolescence.</p> 
+  			  <p>Written and Directed by Yulin Kuang</p>
+  			  <p><a href="http://firstkissmovie.wordpress.com/"/>http://firstkissmovie.wordpress.com/</a></p>
   			  <iframe src="http://player.vimeo.com/video/45941165" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
 			</div>
