--- a/new/producer.html
+++ b/new/producer.html
@@ -95,7 +95,7 @@
 			</div>
 			
 			<div id="content">
-			  <div class="description" data-fill="#FF00FC">
+			  <div class="description" data-fill="#FC6CFF">
 			    <div>
 			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100.0px" height="100px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
             <path fill="#000000" d="M997.753,106.92c4.418-13.051-3.072-13.821-19.966-10.754c-16.895,3.077-16.895-10.744-26.102-12.28  c-9.217-1.531-18.425,27.638-18.425,72.164c0,44.526,5.193,196.142,2.121,236.064c-2.287,29.811-0.497,46.885-0.497,46.885  S793.733,482.512,707.94,554.484c-72.688,60.986-115.31,152.407-141.629,168.126c-15.983,9.534-24.445,16.559-55.284,15.834  c-30.83,0.725-39.292-6.3-55.266-15.834c-26.318-15.72-68.951-107.141-141.638-168.126C228.33,482.512,87.179,439,87.179,439  s1.8-17.075-0.497-46.885c-3.062-39.922,2.11-191.539,2.11-236.064c0-44.526-9.197-73.695-18.414-72.164  c-9.207,1.536-9.207,15.357-26.111,12.28c-16.884-3.067-24.374-2.297-19.946,10.754c10.738,35.313,16.884,93.656,16.884,167.351  c0,73.705,15.601,152.133,12.291,187.447c-4.181,44.34-13.439,105.43-15.167,154.368c-1.324,37.341,1.18,120.864,28.978,171.013  c27.446,49.513,91.742,116.686,214.572,105.942c117.822-10.314,159.193-96.91,229.149-96.91c69.954,0,111.336,86.596,229.158,96.91  c122.83,10.744,187.137-56.429,214.572-105.942c27.789-50.149,30.302-133.672,28.978-171.013  c-1.728-48.938-10.997-110.028-15.155-154.368c-3.311-35.313,12.279-113.742,12.279-187.447  C980.859,200.576,986.994,142.233,997.753,106.92z"/>
@@ -121,6 +121,27 @@
   			  <p>Written and Directed by Yulin Kuang</p>
   			  <p><a href="http://firstkissmovie.wordpress.com/"/>http://firstkissmovie.wordpress.com/</a></p>
   			  <iframe src="http://player.vimeo.com/video/45941165" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			  </div>
+			  <div class="description" data-fill="#63F0FF">
+			    <div>
+			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 width="88.108px" height="100px" viewBox="0 0 88.108 100" enable-background="new 0 0 88.108 100" xml:space="preserve">
+            <path id="path5156" d="M36.786,50.287l3.955,5.841h7.365l3.398-5.841l-3.58-6.22h-7.379L36.786,50.287z M39.819,97.261V84.054
+            	l-7.379,4.15l-3.759-2.152v-4.653l10.943-6.22v-8.68l-7.939,5.102v-9.196l-7.589,4.374v12.468l-4.151,2.572l-3.508-2.321v-8.356
+            	L4.919,77.64L0,75.57V70.3l12.089-6.609L4.528,59.89v-4.822l4.291-2.349l10.845,6.386l7.533-4.346l-0.182-0.139l-7.701-4.417
+            	l7.477-4.64l-7.505-4.346L8.442,47.589l-4.068-2.026v-4.808l7.339-4.123L0,30.272v-5.269l4.5-2.319l11.544,6.666v-8.497l3.48-2.348
+            	l4.264,2.46L23.76,33.683l7.756,4.43l-0.027-8.986l8.134,4.375v-8.68L28.68,18.589v-4.612l3.759-2.18l7.379,4.151V2.768L44.04,0
+            	l4.261,2.768v13.18l7.646-4.235l3.845,2.544v4.151L48.47,24.822v8.68l7.744-4.724v9.448l7.979-4.348V20.28l3.844-1.789l4.038,1.789
+            	v8.694l11.879-6.416l4.153,2.53v4.919l-11.601,6.597l7.254,4.066v4.697L80,47.45l-11.138-6.583l-7.702,4.892l7.449,4.642
+            	l-7.673,4.416l7.926,4.15L80,52.746l3.578,2.53v4.487L76.59,63.69L87.716,70.3v5.188l-4.71,2.152l-10.931-6.221v8.232l-3.927,2.194
+            	l-3.843-2.194V67.155l-8.092-4.611v8.68l-7.744-4.725v8.68l10.944,6.22v4.92l-3.776,1.886l-7.337-4.15v13.207L44.04,100
+            	L39.819,97.261z"/>
+            </svg>
+          </div>
+			    <h2>Take Twelve: A Christmas Movie</h2>
+			    <p>A group of passionate, yet misguided college kids teams up to shoot a Christmas commercial. Accordingly, this is a collaboration between a similar group of Carnegie Mellon students.</p>
+  			  <p>Written by Benjamin Welmond, Yulin Kuang, and Stefan Dezil. Directed by Benjamin Welmond and Yulin Kuang</p>
+  			  <iframe src="http://player.vimeo.com/video/33923170" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
 			</div>
 		
