--- a/new/producer.html
+++ b/new/producer.html
@@ -122,9 +122,23 @@
   			  <p><a href="http://firstkissmovie.wordpress.com/"/>http://firstkissmovie.wordpress.com/</a></p>
   			  <iframe src="http://player.vimeo.com/video/45941165" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
-			  <div class="description" data-fill="#63F0FF">
+			  <div class="description" data-fill="#000">
 			    <div>
-			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="-346 256 100 100" enable-background="new -346 256 100 100" xml:space="preserve">
+            <circle cx="-279.772" cy="264.368" r="8.14"/>
+            <path d="M-270.712,274.206l-18.248-0.007c-1.737,0-3.274,0.434-4.58,1.189c2.446,2.423,3.704,5.982,3.704,9.522v24.845  c0,0.141-0.032,0.249-0.038,0.384l-0.007,41.299c0,2.518,2.044,4.562,4.562,4.562c2.524,0,4.565-2.044,4.565-4.562l0.007-38.288  h2.031l-0.014,38.288c0,2.518,2.045,4.562,4.566,4.562c2.518,0,4.562-2.044,4.562-4.562l0.02-66.009h2.002v24.326  c0,4.892,6.383,4.892,6.37,0v-24.845C-261.21,279.503-264.389,274.206-270.712,274.206z"/>
+            <path d="M-330.665,284.763c0-2.201,0.445-4.212,1.245-5.949h-1.405c-2.518,0-4.562,2.041-4.562,4.562  c0,2.521,2.044,4.566,4.562,4.566h0.16V284.763z"/>
+            <circle cx="-310.251" cy="264.368" r="8.14"/>
+            <path d="M-320.36,351.438c0,2.518,2.044,4.562,4.564,4.562c2.522,0,4.565-2.044,4.565-4.562l0.005-38.288h2.031l-0.013,38.288  c0,2.518,2.044,4.562,4.565,4.562c2.519,0,4.562-2.044,4.562-4.562l0.02-66.009h2.003v24.326c0,4.892,6.382,4.892,6.369,0v-24.845  c0-5.407-3.179-10.705-9.503-10.705l-18.247-0.007c-5.763,0-9.375,4.7-9.375,10.564v24.993c0,4.857,6.419,4.857,6.419,0V285.43  h2.044L-320.36,351.438z"/>
+            </svg>
+          </div>
+			    <h2>Friendzone</h2>
+			    <p>A literal take on the oh-so-familiar place in a relationship that is inescapable yet unavoidable. Welcome to the Friendzone. </p>
+  			  <p>Written and Directed by Yulin Kuang</p>
+			  </div>
+			  <div class="description" data-fill="#87BFFF">
+			    <div>
+			      <svg style="width: 70px; height: 70px" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             	 width="88.108px" height="100px" viewBox="0 0 88.108 100" enable-background="new 0 0 88.108 100" xml:space="preserve">
             <path id="path5156" d="M36.786,50.287l3.955,5.841h7.365l3.398-5.841l-3.58-6.22h-7.379L36.786,50.287z M39.819,97.261V84.054
             	l-7.379,4.15l-3.759-2.152v-4.653l10.943-6.22v-8.68l-7.939,5.102v-9.196l-7.589,4.374v12.468l-4.151,2.572l-3.508-2.321v-8.356
