--- a/new/screenwriting.html
+++ b/new/screenwriting.html
@@ -105,8 +105,7 @@
           </div>
 			    <h2>Perfect Day</h2>
 			    <p>23-year-old Oscar Livingston is obsessive. His life is dominated by a voice in his head that analyzes every aspect of his the world around him. But Oscar&#39s tireless quest for perfection is threatened when he meets a girl who sees past his cynical, misanthropic view of the world.</p>
-			    <p><a href="files/The Perfect Day.pdf">Script Pdf</a></p>
-  			  <p><img src="images/icon/producing/Perfect Day.jpg" width="576" /></p>
+			    <p><a href="files/The Perfect Day.pdf">Script</a></p>
 			  </div>
 			  <div class="description" data-fill="#000">
 			    <div>
@@ -124,8 +123,17 @@
           </div>
 			    <h2>Hansel and Gretel: The Untold Story</h2>
 			    <p>A reimagining of the classic fairytale story of cannibalism and child abandonment.</p>
-			    <p><a href="files/Hansel and Gretel The Untold Story.pdf">Script Pdf</a></p>
-  			  <p><img src="images/icon/producing/Hansel and Gretel.jpg" height="384" /></p>
+			    <p><a href="files/Hansel and Gretel The Untold Story.pdf">Script</a></p>
+			  </div>
+			  <div class="description" data-fill="#000">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+            <path d="M26.906,27.628l-5.773-3.849c0,0,1.924-9.141,3.85-12.99c1.924-3.849,3.848-5.773,7.697-7.697  c3.85-1.925,7.697-1.925,7.697-1.925S41.711,8.383,50,8.383s9.623-7.217,9.623-7.217s3.848,0,7.697,1.925  c3.849,1.924,5.773,3.849,7.697,7.697c1.925,3.849,3.85,12.99,3.85,12.99l-5.773,3.849c0,0-5.773-5.292-5.773-7.217  c0,9.622-3.85,15.396-3.85,23.094c0,8.517,11.547,32.716,11.547,53.885c-3.848,1.925-46.187,1.925-50.035,0  c0-21.169,11.547-45.596,11.547-53.885c0-7.698-3.85-13.472-3.85-23.094C32.68,22.335,26.906,27.628,26.906,27.628z"/>
+            </svg>
+          </div>
+			    <h2>Mr. Dobbs</h2>
+			    <p>Following the death of his wife, 75-year-old Jerry Dobbs relocates to rural North Dakota in an attempt to reclaim his physical and mental health.</p>
+			    <p><a href="files/Mr. Dobbs.pdf">Script</a></p>
 			  </div>
 			</div>
 	</body>
