--- a/new/screenwriting.html
+++ b/new/screenwriting.html
@@ -95,7 +95,7 @@
 			</div>
 			
 			<div id="content">
-			  <div class="description" data-fill="#000">
+			  <div class="description" data-fill="#4C3F4C">
 			    <div>
 			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
             <g>
@@ -106,6 +106,16 @@
 			    <h2>Perfect Day</h2>
 			    <p>23-year-old Oscar Livingston is obsessive. His life is dominated by a voice in his head that analyzes every aspect of his the world around him. But Oscar&#39s tireless quest for perfection is threatened when he meets a girl who sees past his cynical, misanthropic view of the world.</p>
 			    <p><a href="files/The Perfect Day.pdf">Script</a></p>
+			  </div>
+			  <div class="description" data-fill="#FFF371">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+            <path d="M26.906,27.628l-5.773-3.849c0,0,1.924-9.141,3.85-12.99c1.924-3.849,3.848-5.773,7.697-7.697  c3.85-1.925,7.697-1.925,7.697-1.925S41.711,8.383,50,8.383s9.623-7.217,9.623-7.217s3.848,0,7.697,1.925  c3.849,1.924,5.773,3.849,7.697,7.697c1.925,3.849,3.85,12.99,3.85,12.99l-5.773,3.849c0,0-5.773-5.292-5.773-7.217  c0,9.622-3.85,15.396-3.85,23.094c0,8.517,11.547,32.716,11.547,53.885c-3.848,1.925-46.187,1.925-50.035,0  c0-21.169,11.547-45.596,11.547-53.885c0-7.698-3.85-13.472-3.85-23.094C32.68,22.335,26.906,27.628,26.906,27.628z"/>
+            </svg>
+          </div>
+			    <h2>Mr. Dobbs</h2>
+			    <p>Following the death of his wife, 75-year-old Jerry Dobbs relocates to rural North Dakota in an attempt to reclaim his physical and mental health.</p>
+			    <p><a href="files/Mr. Dobbs.pdf">Script</a></p>
 			  </div>
 			  <div class="description" data-fill="#000">
 			    <div>
@@ -125,16 +135,6 @@
 			    <p>A reimagining of the classic fairytale story of cannibalism and child abandonment.</p>
 			    <p><a href="files/Hansel and Gretel The Untold Story.pdf">Script</a></p>
 			  </div>
-			  <div class="description" data-fill="#000">
-			    <div>
-			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-            <path d="M26.906,27.628l-5.773-3.849c0,0,1.924-9.141,3.85-12.99c1.924-3.849,3.848-5.773,7.697-7.697  c3.85-1.925,7.697-1.925,7.697-1.925S41.711,8.383,50,8.383s9.623-7.217,9.623-7.217s3.848,0,7.697,1.925  c3.849,1.924,5.773,3.849,7.697,7.697c1.925,3.849,3.85,12.99,3.85,12.99l-5.773,3.849c0,0-5.773-5.292-5.773-7.217  c0,9.622-3.85,15.396-3.85,23.094c0,8.517,11.547,32.716,11.547,53.885c-3.848,1.925-46.187,1.925-50.035,0  c0-21.169,11.547-45.596,11.547-53.885c0-7.698-3.85-13.472-3.85-23.094C32.68,22.335,26.906,27.628,26.906,27.628z"/>
-            </svg>
-          </div>
-			    <h2>Mr. Dobbs</h2>
-			    <p>Following the death of his wife, 75-year-old Jerry Dobbs relocates to rural North Dakota in an attempt to reclaim his physical and mental health.</p>
-			    <p><a href="files/Mr. Dobbs.pdf">Script</a></p>
-			  </div>
 			   <div class="description" data-fill="#000">
   			    <div>
   			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -153,7 +153,7 @@
   			    <p>Seventy-year-old and retired, Art Emerson is content with nothing but a fishing rod and a clear day. However, his pal Bud Reilly seems to have a little more luck at the docks than him.</p>
   			    <p><a href="files/The Big One.pdf">Script</a></p>
   			  </div>
-  			  <div class="description" data-fill="#000">
+  			  <div class="description" data-fill="#00AD17">
     			    <div>
     			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Calque_1" x="0px" y="0px" width="100.0px" height="100px" viewBox="0 0 623.62 623.62" enable-background="new 0 0 623.62 623.62" xml:space="preserve">
                 <path d="M467.082,327.945l42.52,47.023h70.865l-50.52-56.924h32.348l18.172-20.756h-42.52h-60.691l3.959-3.932h60.031l39.221-45.948  h-71.141l-42.244,47.023c0,0,0,0-70.867-34.268c-17.584-8.503-45.486-12.756-56.693-12.756c-70.866,0-212.598,0-212.598,0  c-85.039,0-77.953,63.779-77.953,63.779l0,0c0,0-7.086,63.78,77.953,63.78c0,0,141.732,0,212.598,0  c11.207,0,39.109-4.252,56.693-12.756C467.082,327.945,467.082,327.945,467.082,327.945z"/>
