--- a/new/screenwriting.html
+++ b/new/screenwriting.html
@@ -117,7 +117,7 @@
 			    <p>Following the death of his wife, 75-year-old Jerry Dobbs relocates to rural North Dakota in an attempt to reclaim his physical and mental health.</p>
 			    <p><a href="files/Mr. Dobbs.pdf">Script</a></p>
 			  </div>
-			  <div class="description" data-fill="#000">
+			  <div class="description" data-fill="#f00">
 			    <div>
 			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             	 width="100px" height="77.913px" viewBox="0 0 100 77.913" enable-background="new 0 0 100 77.913" xml:space="preserve">
