--- a/new/screenwriting.html
+++ b/new/screenwriting.html
@@ -117,7 +117,7 @@
 			    <p>Following the death of his wife, 75-year-old Jerry Dobbs relocates to rural North Dakota in an attempt to reclaim his physical and mental health.</p>
 			    <p><a href="files/Mr. Dobbs.pdf">Script</a></p>
 			  </div>
-			  <div class="description" data-fill="#f00">
+			  <div class="description" data-fill="#000929">
 			    <div>
 			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             	 width="100px" height="77.913px" viewBox="0 0 100 77.913" enable-background="new 0 0 100 77.913" xml:space="preserve">
@@ -135,7 +135,7 @@
 			    <p>A reimagining of the classic fairytale story of cannibalism and child abandonment.</p>
 			    <p><a href="files/Hansel and Gretel The Untold Story.pdf">Script</a></p>
 			  </div>
-			   <div class="description" data-fill="#4380FF">
+			   <div class="description" data-fill="#373A4C">
   			    <div>
   			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               	 width="100px" height="53.037px" viewBox="0 0 100 53.037" enable-background="new 0 0 100 53.037" xml:space="preserve">
@@ -153,7 +153,7 @@
   			    <p>Seventy-year-old and retired, Art Emerson is content with nothing but a fishing rod and a clear day. However, his pal Bud Reilly seems to have a little more luck at the docks than him.</p>
   			    <p><a href="files/The Big One.pdf">Script</a></p>
   			  </div>
-  			  <div class="description" data-fill="#00AD17">
+  			  <div class="description" data-fill="#292E16">
     			    <div>
     			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Calque_1" x="0px" y="0px" width="100.0px" height="100px" viewBox="0 0 623.62 623.62" enable-background="new 0 0 623.62 623.62" xml:space="preserve">
                 <path d="M467.082,327.945l42.52,47.023h70.865l-50.52-56.924h32.348l18.172-20.756h-42.52h-60.691l3.959-3.932h60.031l39.221-45.948  h-71.141l-42.244,47.023c0,0,0,0-70.867-34.268c-17.584-8.503-45.486-12.756-56.693-12.756c-70.866,0-212.598,0-212.598,0  c-85.039,0-77.953,63.779-77.953,63.779l0,0c0,0-7.086,63.78,77.953,63.78c0,0,141.732,0,212.598,0  c11.207,0,39.109-4.252,56.693-12.756C467.082,327.945,467.082,327.945,467.082,327.945z"/>
