--- a/new/director.html
+++ b/new/director.html
@@ -108,7 +108,7 @@
   			  <p>Written and Directed by Nicolas Hurt</p>
   			  <iframe src="http://player.vimeo.com/video/38886298" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
-			  <div class="description" data-fill="#00AD17">
+			  <div class="description" data-fill="#3E6516">
 			    <div>
 			    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="87.778px" height="100px" viewBox="0 0 87.778 100" enable-background="new 0 0 87.778 100" xml:space="preserve">
           <g id="Layer_1">
