--- a/new/producer.html
+++ b/new/producer.html
@@ -124,7 +124,7 @@
 			  </div>
 			  <div class="description" data-fill="#000">
 			    <div>
-			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="-346 256 100 100" enable-background="new -346 256 100 100" xml:space="preserve">
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"  width="88.108px" height="100px" viewBox="-346 256 100 100" enable-background="new -346 256 100 100" xml:space="preserve">
             <circle cx="-279.772" cy="264.368" r="8.14"/>
             <path d="M-270.712,274.206l-18.248-0.007c-1.737,0-3.274,0.434-4.58,1.189c2.446,2.423,3.704,5.982,3.704,9.522v24.845  c0,0.141-0.032,0.249-0.038,0.384l-0.007,41.299c0,2.518,2.044,4.562,4.562,4.562c2.524,0,4.565-2.044,4.565-4.562l0.007-38.288  h2.031l-0.014,38.288c0,2.518,2.045,4.562,4.566,4.562c2.518,0,4.562-2.044,4.562-4.562l0.02-66.009h2.002v24.326  c0,4.892,6.383,4.892,6.37,0v-24.845C-261.21,279.503-264.389,274.206-270.712,274.206z"/>
             <path d="M-330.665,284.763c0-2.201,0.445-4.212,1.245-5.949h-1.405c-2.518,0-4.562,2.041-4.562,4.562  c0,2.521,2.044,4.566,4.562,4.566h0.16V284.763z"/>
@@ -138,8 +138,8 @@
 			  </div>
 			  <div class="description" data-fill="#87BFFF">
 			    <div>
-			      <svg style="width: 80px; height: 80px" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            	 width="88.108px" height="100px" viewBox="0 0 88.108 100" enable-background="new 0 0 88.108 100" xml:space="preserve">
+			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 width="90px" height="100px" viewBox="0 0 88.108 100" enable-background="new 0 0 88.108 100" xml:space="preserve">
             <path id="path5156" d="M36.786,50.287l3.955,5.841h7.365l3.398-5.841l-3.58-6.22h-7.379L36.786,50.287z M39.819,97.261V84.054
             	l-7.379,4.15l-3.759-2.152v-4.653l10.943-6.22v-8.68l-7.939,5.102v-9.196l-7.589,4.374v12.468l-4.151,2.572l-3.508-2.321v-8.356
             	L4.919,77.64L0,75.57V70.3l12.089-6.609L4.528,59.89v-4.822l4.291-2.349l10.845,6.386l7.533-4.346l-0.182-0.139l-7.701-4.417
