--- a/new/screenwriting.html
+++ b/new/screenwriting.html
@@ -155,9 +155,14 @@
   			  </div>
   			  <div class="description" data-fill="#292E16">
     			    <div>
-    			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Calque_1" x="0px" y="0px" width="100.0px" height="100px" viewBox="0 0 623.62 623.62" enable-background="new 0 0 623.62 623.62" xml:space="preserve">
-                <path d="M467.082,327.945l42.52,47.023h70.865l-50.52-56.924h32.348l18.172-20.756h-42.52h-60.691l3.959-3.932h60.031l39.221-45.948  h-71.141l-42.244,47.023c0,0,0,0-70.867-34.268c-17.584-8.503-45.486-12.756-56.693-12.756c-70.866,0-212.598,0-212.598,0  c-85.039,0-77.953,63.779-77.953,63.779l0,0c0,0-7.086,63.78,77.953,63.78c0,0,141.732,0,212.598,0  c11.207,0,39.109-4.252,56.693-12.756C467.082,327.945,467.082,327.945,467.082,327.945z"/>
+    			      <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                	 width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+                <path d="M64.837,29.954l9.92-2.219l5.599-9.888l-11.934,2.553l2.556-4.514l-1.461-4.176l-3.359,5.933l-4.795,8.469l-0.235-0.863
+                	l4.743-8.377l-3.313-9.103l-5.621,9.927l3.225,9.61c0,0,0,0-10.38,7.181c-2.576,1.782-5.374,5.34-6.259,6.904
+                	c-5.599,9.888-16.797,29.666-16.797,29.666c-6.718,11.866,2.741,15.917,2.741,15.917l0,0c0,0,8.34,6.027,15.058-5.839
+                	c0,0,11.198-19.777,16.796-29.666c0.886-1.563,2.497-5.793,2.7-8.919C64.837,29.954,64.837,29.954,64.837,29.954z"/>
                 </svg>
+                
               </div>
     			    <h2>Birmingham, 1942</h2>
     			    <p>A peek into the lives of an English family during WWII. This is a scene study aimed at finding how much can be said without any words.</p>
