--- a/new/filmanalyst.html
+++ b/new/filmanalyst.html
@@ -111,7 +111,51 @@
           </div>
 			    <h2>Psychoanalytic Theory and A Clockwork Orange</h2>
 			    <p>Stanley Kubrick&#39s <i>A Clockwork Orange</i> (1971) explores the debate of free will&#39s role in morality. Alex&#39s transformation throughout the film can best be understood in the context of psychoanalytic theory.</p>
-			    <p><a href="files/The Perfect Day.pdf">Script</a></p>
+			    <p><a href="files/Psychoanalytic Theory and A Clockwork Orange.pdf">Essay</a></p>
+			  </div>
+			  <div class="description" data-fill="#000">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+            <path d="M49.916,46H99.5l-2.077,26H59.836c-1.04,0-4.398-0.371-5.428-3.991C53.369,64.355,49.916,64,49.916,64h-0.832  c0,0-3.453,0.355-4.492,4.009C43.562,71.629,40.204,72,39.164,72H1.577L-0.5,46h49.584H49.916z M38.004,59c0-4.476-3.349-8-7.479-8  H16.675c-4.131,0-7.479,3.524-7.479,8l0,0c0,4.476,3.349,8,7.479,8h13.851C34.655,67,38.004,63.476,38.004,59L38.004,59z M60.996,59  c0,4.476,3.349,8,7.479,8h13.851c4.131,0,7.479-3.524,7.479-8l0,0c0-4.476-3.349-8-7.479-8H68.475  C64.345,51,60.996,54.524,60.996,59L60.996,59z"/>
+            <path d="M79.001,44h14.682c0,0-19.965-15.125-21.22-15.873c-1.132-0.675-2.879-1.345-4.296-0.012  c-1.936,1.821-6.47,9.238-3.237,12.471c1.062,1.062,3.536,0.354,5.669-4.828C72.814,37.892,79.001,44,79.001,44z"/>
+            <path d="M20.481,44H5.8c0,0,19.965-15.125,21.22-15.873c1.132-0.675,2.879-1.345,4.296-0.012c1.936,1.821,6.47,9.238,3.237,12.471  c-1.062,1.062-3.536,0.354-5.669-4.828C26.668,37.892,20.481,44,20.481,44z"/>
+            </svg>
+          </div>
+			    <h2>3-D Cinema: Triumph of the Image</h2>
+			    <p>3-D cinema arose as the product of a midlife crisis in the 1950&#39s, and it was quickly married to the exploitation genre. Here I explore its relation to the earlier "cinema of attractions" and contemporary Hollywood cinema through the manners in which the image either compliments or competes with story.</p>
+			    <p><a href="files/3-D Cinema Triumph of the Image.pdf">Essay</a></p>
+			  </div>
+			  <div class="description" data-fill="#000">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" width="90px" height="60px" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 10.3836 6.20795">
+             <g id="Layer_x0020_1">
+              <path d="M8.8275 2.89407l1.44049 0c-0.262618,-0.389487 -0.548221,-0.813457 -0.684413,-1.40984l-0.0706596 0c-0.117377,0.550408 -0.3765,1.03951 -0.685413,1.40984zm-1.76995 0.0306351l1.44049 0c-0.262618,-0.277266 -0.548221,-0.579181 -0.684413,-1.00374l-0.0706596 0c-0.117373,0.391943 -0.3765,0.740073 -0.685413,1.00374zm-1.18653 -1.3466l0.586831 0c-0.106988,-0.284714 -0.223337,-0.594627 -0.278819,-1.03057l-0.0287888 0c-0.0478206,0.402344 -0.153377,0.759864 -0.279223,1.03057zm-1.97829 -1.18603e-005l0.586831 0c-0.106984,-0.284714 -0.223333,-0.594627 -0.278819,-1.03057l-0.0287849 0c-0.0478206,0.402344 -0.153377,0.759864 -0.279226,1.03057zm2.02164 0.623712c-0.275404,-0.608808 -0.565447,-1.27815 -0.707319,-2.20181l-0.0772697 0c-0.121999,0.850757 -0.384119,1.61144 -0.699875,2.20181l-0.0387831 0 -1.18603e-005 -0.459744 -0.409927 0 1.18603e-005 0.915641 0.180063 0 -1.18603e-005 0.92711 -0.168554 0 -1.58137e-005 -0.340967 -0.505702 0 -0.00365692 0.228018 -0.136259 -0.000766964 0.00199648 -0.326845 -1.45964 0 -0.000280693 0.169918 -0.262108 -0.00114649 0.00187788 -0.168772 -1.62823 -1.18603e-005 -0.000676036 0.49081 0.323228 0.337445 -0.00940125 1.53819 -0.237526 0.346486 1.91937 0.00597363 -0.17522 0.344798 2.29482 0 0 -0.781541c0,-0.594212 0.486157,-1.08037 1.08036,-1.08037l0 0c0.594212,0 1.08037,0.486157 1.08037,1.08037l0 0.781541 2.3906 0 -0.283176 -0.344798 1.92319 -0.00381901 -0.233699 -0.348641 -0.00113068 -1.53821 0.311787 -0.337433 -0.00072743 -0.49081 -1.61281 1.18603e-005 -0.00135998 0.164103 -0.289802 0.000636501 0 -0.164739 -1.38513 0 0 0.436423 -0.203289 0 -1.58137e-005 -0.336828 -0.587625 0 -0.00191346 0.340967 -0.139837 0 -0.00383087 -0.92711 0.216458 0 0.00861847 -0.915641 -0.435786 0 -0.00191741 0.459744 -0.0302437 0zm-4.00424 0.7229l1.44049 0c-0.262618,-0.277266 -0.548225,-0.579181 -0.684417,-1.00374l-0.0706596 0c-0.117373,0.391943 -0.376497,0.740073 -0.685413,1.00374zm-1.81558 -0.0306351l1.44049 0c-0.262618,-0.389487 -0.548225,-0.813457 -0.684417,-1.40984l-0.0706596 0c-0.117373,0.550408 -0.376497,1.03951 -0.685413,1.40984z"/>
+             </g>
+            </svg>
+          </div>
+			    <h2>Citizen Kane and the Active Spectator</h2>
+			    <p>Orson Welles&#39 <i>Citizen Kane</i> (1941) explores cinema&#39s potential to communicate visual meaning through a dynamic spectator-screen relationship. The film&#39s sophisticated use of deep focus presents multiple, interacting planes of interest within a shot, demanding a more active spectatorship.</p>
+			    <p><a href="files/Citizen Kane and the Active Spectator.pdf">Essay</a></p>
+			  </div>
+			  <div class="description" data-fill="#000">
+			    <div>
+			      <svg xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" version="1.0" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+            <path d="M94.298,1.225l0.99,3.155l-25.32,16.184L27.554,49.095l-2.715-0.749l-3.879,2.608l1.191,1.771L21.146,53.4l0.004,0.008  L21.75,54.3l2.736,4.067l0.875-0.582l1.655,0.238c0,0,0.263,0.774-0.671,2.358c-1.134,1.924-4.825,1.886-5.594,1.856  c-0.09-0.004-0.18,0.042-0.255,0.132C19.147,63.983,6.326,79.352,3.821,82.06c-2.646,2.863-1.333,3.328-0.67,4.086  c0.662,0.763,3.926,4.907,6.432,8.96c3.04,4.916,5.183,5.317,11.322-8.922c2.785-6.46,7.284-18.137,15.386-26.387  c3.129-3.189,1.735-7.726,1.735-7.726s0.898-0.681,3.457-2.323c1.426-0.918,2.646-0.568,3.04,0.563  c0.534,1.539-0.321,4.601-0.368,8.785c-0.026,2.277,2.534,4.109,5.31,4.159c2.066,0.042,4.198-1.063,4.993-1.521  c0.21-0.121,0.19-0.235-0.007-0.369c-0.287-0.197-0.704-0.599-1.013-1.383c-0.596-1.513,0.421-2.87,0.614-3.109  c0.02-0.023,0.016-0.048-0.013-0.069c-0.243-0.197-1.411-1.283-1.266-3.856c0.15-2.682,0.649-4.252,0.649-4.252l6.694-4.503  l6.931,10.303l5.355-3.604l-12.709-18.89l0.975-0.655l0.983,1.46l6.136-4.126l1.298,1.954l26.914-19.518l-2.097-3.116l4.285-2.883  l-3.013-4.479L94.298,1.225z M58.521,42.208c0.642,0.953,0.385,2.244-0.569,2.887l-2.858,1.923  c-0.952,0.641-2.246,0.391-2.886-0.563l-0.145-0.214c-0.42-0.625-0.453-1.395-0.159-2.032c0.577-0.023,1.09,0.033,1.185,0.276  c0.2,0.499,0.771,1.713,2.791,1.609l-0.044-0.264c-0.786-0.078-1.436-0.393-1.812-0.953c-0.438-0.652-0.432-1.518-0.066-2.417  l1.531-1.029c0.954-0.64,2.248-0.39,2.888,0.562L58.521,42.208z"/>
+            </svg>
+          </div>
+			    <h2>The Gangster Film: A Welcomed Tragedy</h2>
+			    <p>Epitomized by Howard Hawks&#39 <i>Scarface</i> (1932), the gangster film genre provided spectators with cathartic relief from the social tensions brought about by the Great Depression, and it presented a critical discourse on American mass culture.</p>
+			    <p><a href="files/The Gangster Film A Welcomed Tragedy.pdf">Essay</a></p>
+			  </div>
+			  <div class="description" data-fill="#000">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+            <path fill="#000000" d="M99.945,33.019c-4.848-2.65-11.104-3.301-17.101-2.413c-11.481,1.7-20.451,8.93-26.209,20.051  c-2.054-3.019-3.296-6.817-3.329-10.955c-1.551,2.128-2.673,4.684-3.24,7.488c-0.567-2.805-1.689-5.36-3.24-7.488  c-0.033,4.21-1.315,8.074-3.436,11.118c-5.754-11.213-14.752-18.506-26.289-20.214C11.103,29.718,4.847,30.368,0,33.019  c11.051,1.697,14.079,8.617,12.227,15.589c8.736-2.634,17.313,6.145,14.513,16.375c2.322-1.115,5.657-1.422,8.708-1.018  c7.296,0.967,12.496,8.484,14.52,17.535c0.001-0.01,0.003-0.022,0.005-0.034c0.001,0.012,0.004,0.024,0.005,0.034  c2.025-9.051,7.224-16.568,14.521-17.535c3.05-0.404,6.385-0.098,8.706,1.018c-2.8-10.229,5.778-19.008,14.514-16.375  C85.866,41.636,88.895,34.716,99.945,33.019z"/>
+            </svg>
+          </div>
+			    <h2>Batman: Critical Reception of the Hollywood Blockbuster</h2>
+			    <p>Tim Burton&#39s <i>Batman</i> (1989) employs an awe-inspiring visual style to attract its audience, ultimately substituting spectacle for narrative consistency, a concession that is reflected by its disparaging critical reception.</p>
+			    <p><a href="files/Batman Critical Reception of the Hollywood Blockbuster.pdf">Essay</a></p>
 			  </div>
 			</div>
 	</body>
