--- a/new/producer.html
+++ b/new/producer.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 			<div id="header">
-				<h1><a href="index.html">Producer</a></h1>
+				<h1><a href="index.html">Nicolas Hurt</a></h1>
 			</div>
 			
 			<div id="menu" class="round-edge">
