--- a/new/filmanalyst.html
+++ b/new/filmanalyst.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 			<div id="header">
-				<h1><a href="index.html">Nicolas Hurt</h1>
+				<h1><a href="index.html">Nicolas Hurt</a></h1>
 			</div>
 			
 			<div id="menu" class="round-edge">
@@ -93,6 +93,7 @@
 			    </li>
 			  </ul>
 			</div>
+      
 			
 			<div id="content">
 			  <div class="description" data-fill="#000">
