--- a/new/index.html
+++ b/new/index.html
@@ -76,7 +76,7 @@
 			      </a>
 			    </li>
 			    <li>
-			      <a>
+			      <a  href="files/Nicolas Hurt Resume Website.pdf" target="_blank">
 			        <svg class="menu_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="96.886px" viewBox="0 0 100 96.886" enable-background="new 0 0 100 96.886" xml:space="preserve">
               <g>
               	<g>
