--- a/new/other.html
+++ b/new/other.html
@@ -168,6 +168,23 @@
 			    <p>Recently accepted to the Fifth Year Scholarship program, I will be commissioned to stay at Carnegie Mellon University for an additional year in order to create a documentary film series that spotlights student academic and social life. I treat this as an opportunity not only to examine captivating and elusive subject matter but also to refine my filmmaking skills.</p>
 			    <p><a href="http://www.studentaffairs.cmu.edu/dean/fifth/">http://www.studentaffairs.cmu.edu/dean/fifth/</a></p>
 			  </div>
+			  <div id="footer">			    
+  	      <div id="contact">
+  	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+  	          <img src="images/footer/GM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://vimeo.com/nicolashurt" target="_blank">
+  	          <img src="images/footer/VIM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+  	          <img src="images/footer/LI.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
+  	          <img src="images/footer/FB.png" width="25" height="25"/>
+    	      </a>
+  	      </div>
+  	      <p>&#169; Nicolas Hurt 2012</p>
+  	    </div>
 			</div>
 	</body>
 </html>
