--- a/new/screenwriter.html
+++ b/new/screenwriter.html
@@ -168,6 +168,23 @@
     			    <p>A peek into the lives of an English family during WWII. This is a scene study aimed at finding how much can be said without any words.</p>
     			    <p><a href="files/Birmingham, 1942.pdf">Script</a></p>
     			  </div>
+    			  <div id="footer">			    
+      	      <div id="contact">
+      	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+      	          <img src="images/footer/GM.png" width="25" height="25"/>
+        	      </a>
+        	      <a href="http://vimeo.com/nicolashurt" target="_blank">
+      	          <img src="images/footer/VIM.png" width="25" height="25"/>
+        	      </a>
+        	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+      	          <img src="images/footer/LI.png" width="25" height="25"/>
+        	      </a>
+        	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
+      	          <img src="images/footer/FB.png" width="25" height="25"/>
+        	      </a>
+      	      </div>
+      	      <p>&#169; Nicolas Hurt 2012</p>
+      	    </div>
 			</div>
 	</body>
 </html>
