--- a/new/director.html
+++ b/new/director.html
@@ -124,8 +124,24 @@
   			  <p>Written and Directed by Nicolas Hurt</p>
   			  <iframe src="http://player.vimeo.com/video/41047005" width="576" height="384"frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
-			  
+			  <div id="footer">			    
+  	      <div id="contact">
+  	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+  	          <img src="images/footer/GM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://vimeo.com/nicolashurt" target="_blank">
+  	          <img src="images/footer/VIM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+  	          <img src="images/footer/LI.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
+  	          <img src="images/footer/FB.png" width="25" height="25"/>
+    	      </a>
+  	      </div>
+  	      <p>&#169; Nicolas Hurt 2012</p>
+  	    </div>
 			</div>
-		
+	    
 	</body>
 </html>
