--- a/new/filmanalyst.html
+++ b/new/filmanalyst.html
@@ -158,6 +158,23 @@
 			    <p>Tim Burton&#39s <i>Batman</i> (1989) employs an awe-inspiring visual style to attract its audience, ultimately substituting spectacle for narrative consistency, a concession that is reflected by its disparaging critical reception.</p>
 			    <p><a href="files/Batman Critical Reception of the Hollywood Blockbuster.pdf">Essay</a></p>
 			  </div>
+			  <div id="footer">			    
+  	      <div id="contact">
+  	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+  	          <img src="images/footer/GM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://vimeo.com/nicolashurt" target="_blank">
+  	          <img src="images/footer/VIM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+  	          <img src="images/footer/LI.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
+  	          <img src="images/footer/FB.png" width="25" height="25"/>
+    	      </a>
+  	      </div>
+  	      <p>&#169; Nicolas Hurt 2012</p>
+  	    </div>
 			</div>
 	</body>
 </html>
