--- a/new/index.html
+++ b/new/index.html
@@ -76,7 +76,7 @@
 			      </a>
 			    </li>
 			    <li>
-			      <a  href="files/Nicolas Hurt Resume Website.pdf" target="_blank">
+			      <a href="files/Nicolas Hurt Resume Website.pdf" target="_blank">
 			        <svg class="menu_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="96.886px" viewBox="0 0 100 96.886" enable-background="new 0 0 100 96.886" xml:space="preserve">
               <g>
               	<g>
@@ -98,6 +98,23 @@
 			  <div id="viewbox">
 			    <iframe src="http://player.vimeo.com/video/38886298" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			  </div>
+			  <div id="footer">			    
+  	      <div id="contact">
+  	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+  	          <img src="images/footer/GM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://vimeo.com/nicolashurt" target="_blank">
+  	          <img src="images/footer/VIM.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+  	          <img src="images/footer/LI.png" width="25" height="25"/>
+    	      </a>
+    	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
+  	          <img src="images/footer/FB.png" width="25" height="25"/>
+    	      </a>
+  	      </div>
+  	      <p>&#169; Nicolas Hurt 2012</p>
+  	    </div>
 			</div>
 	</body>
 </html>
