--- a/new/producer.html
+++ b/new/producer.html
@@ -160,16 +160,16 @@
 			  <div id="footer">			    
   	      <div id="contact">
   	        <a href="mailto:nhurt@cmu.edu" target="_blank">
-  	          <img src="images/footer/GM.png" width="25" height="25"/>
+  	          <img src="images/Footer/GM.png" width="25" height="25"/>
     	      </a>
     	      <a href="http://vimeo.com/nicolashurt" target="_blank">
-  	          <img src="images/footer/VIM.png" width="25" height="25"/>
+  	          <img src="images/Footer/VIM.png" width="25" height="25"/>
     	      </a>
     	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
-  	          <img src="images/footer/LI.png" width="25" height="25"/>
+  	          <img src="images/Footer/LI.png" width="25" height="25"/>
     	      </a>
     	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
-  	          <img src="images/footer/FB.png" width="25" height="25"/>
+  	          <img src="images/Footer/FB.png" width="25" height="25"/>
     	      </a>
   	      </div>
   	      <p>&#169; Nicolas Hurt 2012</p>
