--- a/new/index.html
+++ b/new/index.html
@@ -11,7 +11,7 @@
 		<script>
 		  $(function(){
 		    $("#galleria").galleria({
-            autoplay: 3000 // will move forward every 7 seconds
+            autoplay: 4000 
         });
         
 		    Galleria.loadTheme('javascripts/classic/galleria.classic.min.js');
