--- a/new/director.html
+++ b/new/director.html
@@ -132,7 +132,7 @@
     	      <a href="http://vimeo.com/nicolashurt" target="_blank">
   	          <img src="images/Footer/VIM.png" width="25" height="25"/>
     	      </a>
-    	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+    	      <a href="http://www.linkedin.com/in/nicolashurt" target="_blank">
   	          <img src="images/Footer/LI.png" width="25" height="25"/>
     	      </a>
     	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
