--- a/new/index.html
+++ b/new/index.html
@@ -110,14 +110,16 @@
             <img src="images/home/Home 1.jpg" />
             <img src="images/home/Home 2.jpg" />
             <img src="images/home/Home 3.jpg" />
-            <img src="images/home/Home 4b.jpg" />
+            <img src="images/home/Home 4.jpg" />
             <img src="images/home/Home 5.jpg" />
             <img src="images/home/Home 6.jpg" />
-            <img src="images/home/Home 7b.jpg" />
+            <img src="images/home/Home 7.jpg" />
             <img src="images/home/Home 8.jpg" />
             <img src="images/home/Home 9.jpg" />
-            <img src="images/home/Home 10b.jpg" />
+            <img src="images/home/Home 10.jpg" />
             <img src="images/home/Home 11.jpg" />
+            <img src="images/home/Home 12.jpg" />
+            <img src="images/home/Home 13.jpg" />
         </div>
 			  <div id="footer">			    
   	      <div id="contact">
@@ -127,7 +129,7 @@
     	      <a href="http://vimeo.com/nicolashurt" target="_blank">
   	          <img src="images/Footer/VIM.png" width="25" height="25"/>
     	      </a>
-    	      <a href="http://www.linkedin.com/pub/nicolas-hurt/31/a2a/5b2" target="_blank">
+    	      <a href="http://www.linkedin.com/in/nicolashurt" target="_blank">
   	          <img src="images/Footer/LI.png" width="25" height="25"/>
     	      </a>
     	      <a href="https://www.facebook.com/nicolas.hurt.1" target="_blank">
