--- a/new/index.html
+++ b/new/index.html
@@ -18,7 +18,9 @@
         Galleria.run('#galleria');
         
         $('#menu a.current').find("span").fadeTo(0,0);
-        $('#menu a.current').find("span").fadeTo(3000,1);
+        setTimeout(function(){
+          $('#menu a.current').find("span").fadeTo(3000,1);
+        }, 2000);
 		  })
 		</script>
 	</head>
