--- a/director.html
+++ b/director.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Nicolas Hurt | Director</title>
+		<meta name="description" content="A collection of the short films that Nick has directed. He draws heavy influence from Pixar shorts, and it can be seen from his emphasis on visual story over spoken word.">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
