--- a/filmanalyst.html
+++ b/filmanalyst.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Nicolas Hurt | Film Analyst</title>
+		<meta name="description" content="A collection of the essays that Nick has written over the course of his college film studies career. He explores the impact that 3-D has had on the medium, and he analyzes a wide range of films from the perspective of the spectator, the critic, and the film theorist.">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
