--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Nicolas Hurt</title>
+		<meta name="description" content="Nicolas Hurt is a young filmmaker in his senior year at Carnegie Mellon University, where he studies business administration alongside film and media studies. When he is not in the classroom, he is working on his next film project as a director, producer, or writer. In his post-college life, Nick hopes to direct and produce his own feature films in Hollywood.">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
