--- a/other.html
+++ b/other.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Nicolas Hurt | Other Roles</title>
+		<meta name="description" content="A selection of the other roles involving film that Nick has played in the past and will play in the future. These range from positions as an intern to a club vice-president to a festival coordinator.">		
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
