--- a/producer.html
+++ b/producer.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Nicolas Hurt | Producer</title>
+		<meta name="description" content="A collection of the films that Nick has produced. His career as a producer began with the Carnegie Mellon Filmmaking Club and expanded to his most recent production, The Perils of Growing Up Flat-Chested, for Steeltown Entertainment.">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
