--- a/screenwriter.html
+++ b/screenwriter.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Nicolas Hurt | Screenwriter</title>
+		<meta name="description" content="A collection of the scripts that Nick has written throughout his college career. He captures a wide variety of tones, stories, and formats, ranging from a 3-page scene study to a 104-page feature.">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
